--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-altair
-numpy
-pandas
-pydeck
-streamlit
+scikit-learn==1.3.2
+streamlit==1.30.0
+pandas==2.1.4
+numpy==1.26.3
+matplotlib==3.8.2
+seaborn==0.13.1
